--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                 <div class="col-md-6">
                 <% if(session.user_id) { %>
                   <h1 class="mt-5 mb-5 text-center text-warning"><b>Home Page in Cointab Software Developer-Assignment</b></h1>
-                    <h1>hi,<%= session.user_id%></h1>
+                    <h1>hi,<%= user.user_email_address%></h1>
 
                     <a href="/logout" class="btn btn-primary">Logout</a>
 
